--- a/.gitignore
+++ b/.gitignore
@@ -182,8 +182,9 @@ publish/
 # in these scripts will be unencrypted
 PublishScripts/
 
+# Excluded to maintain project asset
 # NuGet Packages
-*.nupkg
+#*.nupkg
 # NuGet Symbol Packages
 *.snupkg
 # The packages folder can be ignored because of Package Restore
