--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.csproj
@@ -32,20 +32,36 @@
     <!-- Xamarin.Forms NuGet packages -->
     <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
         <PackageReference Include="Xamarin.Forms" Version="5.0.0.2401" />
+        <!--#if (AddFormsEssentials)-->
         <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
+        <!--#endif-->
+        <!--#if (AddFormsToolkitPackage)-->
         <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.2" />
+        <!--#endif-->
+        <!--#if (AddFormsMarkupPackage)-->
         <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.2" />
+        <!--#endif-->
     </ItemGroup>
 
+    <!--#if (AddMauiToolkitPackage || AddMauiMarkupPackage)-->
     <!-- .NET MAUI NuGet packages -->
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-        <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-rc3" />
+    <!--#endif-->
+        <!--#if (AddMauiToolkitPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-rc3"/>
+        <!--#endif-->
+        <!--#if (AddMauiMarkupPackage)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0-rc3" />
+        <!--#endif-->
+    <!--#if (AddMauiToolkitPackage || AddMauiMarkupPackage)-->
     </ItemGroup>
+    <!--#endif-->
 
+    <!--#if (AddMvvmToolkitPackage)-->
     <!-- Common NuGet packages -->
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview3" />
     </ItemGroup>
+    <!--#endif-->
 
 </Project>
