--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.csproj
@@ -35,29 +35,29 @@
         <!--#if (AddFormsEssentials)-->
         <PackageReference Include="Xamarin.Essentials" Version="1.7.3" />
         <!--#endif-->
-        <!--#if (AddFormsToolkitPackage)-->
+        <!--#if (AddFormsToolkit)-->
         <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.2" />
         <!--#endif-->
-        <!--#if (AddFormsMarkupPackage)-->
+        <!--#if (AddFormsMarkup)-->
         <PackageReference Include="Xamarin.CommunityToolkit.Markup" Version="2.0.2" />
         <!--#endif-->
     </ItemGroup>
 
-    <!--#if (AddMauiToolkitPackage || AddMauiMarkupPackage)-->
+    <!--#if (AddMauiToolkit || AddMauiMarkup)-->
     <!-- .NET MAUI NuGet packages -->
     <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
     <!--#endif-->
-        <!--#if (AddMauiToolkitPackage)-->
+        <!--#if (AddMauiToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="1.0.0-rc3"/>
         <!--#endif-->
-        <!--#if (AddMauiMarkupPackage)-->
+        <!--#if (AddMauiMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0-rc3" />
         <!--#endif-->
-    <!--#if (AddMauiToolkitPackage || AddMauiMarkupPackage)-->
+    <!--#if (AddMauiToolkit || AddMauiMarkup)-->
     </ItemGroup>
     <!--#endif-->
 
-    <!--#if (AddMvvmToolkitPackage)-->
+    <!--#if (AddMvvmToolkit)-->
     <!-- Common NuGet packages -->
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview3" />
