--- a/src/ProjectTemplates/MauiAppCS/MauiAppCS.csproj
+++ b/src/ProjectTemplates/MauiAppCS/MauiAppCS.csproj
@@ -42,7 +42,7 @@
         <!-- App Icon -->
         <MauiIcon Include="Resources\appicon.svg" ForegroundFile="Resources\appiconfg.svg" Color="#512BD4"/>
         <!-- Splash Screen -->
-        <MauiSplashScreen Include="Resources\appiconfg.svg" Color="#512BD4" BaseSize="128,128"/>
+        <MauiSplashScreen Include="Resources\splash.svg" Color="#512BD4" BaseSize="128,128"/>
         <!-- Images -->
         <MauiImage Include="Resources\Images\*"/>
         <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208" />
@@ -57,8 +57,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0-rc3"/>
-        <PackageReference Include="VijayAnand.MauiToolkit" Version="1.0.0-pre11"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0"/>
+        <PackageReference Include="VijayAnand.MauiToolkit" Version="1.0.0"/>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview3"/>
     </ItemGroup>
 </Project>
