--- a/src/MauiTemplatesCLI/MauiAppX/MauiApp1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppX/MauiApp1.csproj
@@ -73,7 +73,7 @@
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0"/>
         <!--#endif-->
         <!--#if (AddMvvmToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
         <!--#endif-->
     <!--#if (AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
     </ItemGroup>
