--- a/src/ProjectTemplates/MauiAppCS/MauiAppCS.csproj
+++ b/src/ProjectTemplates/MauiAppCS/MauiAppCS.csproj
@@ -57,8 +57,8 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.0"/>
-        <PackageReference Include="VijayAnand.MauiToolkit" Version="1.0.0"/>
-        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.0.1"/>
+        <PackageReference Include="VijayAnand.MauiToolkit" Version="1.0.1"/>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
     </ItemGroup>
 </Project>
