--- a/src/MauiTemplatesCLI/MauiAppX/MauiApp1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppX/MauiApp1.csproj
@@ -92,16 +92,16 @@
     <ItemGroup>
     <!--#endif-->
         <!--#if (Net7)-->
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0-rc.2.22472.3" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <!--#if (AddMapsPackage)-->
-        <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.0-rc.2.6866" />
+        <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.49" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0"/>
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.1.1"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.1"/>
         <!--#endif-->
         <!--#if (AddMvvmToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
@@ -111,7 +111,7 @@
     <!--#endif-->
 
     <!--#if (ConditionalCompilation)-->
-    <ItemGroup Condition="'$(TargetFramework)' != 'net6.0'">
+    <ItemGroup Condition="'$(TargetFramework)' != 'MAUI_TFM'">
         <Compile Remove="**\*.Standard.cs" />
         <None Include="**\*.Standard.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
     </ItemGroup>
