--- a/src/MauiTemplatesCLI/MauiAppX/Platforms/Android/AndroidManifest.xml
+++ b/src/MauiTemplatesCLI/MauiAppX/Platforms/Android/AndroidManifest.xml
@@ -1,9 +1,17 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <!--#if (Net7)-->
+    <!--#if (Hybrid)-->
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="33" />
+    <!--#else-->
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
+    <!--#endif-->
+    <!--#else-->
+    <!--#if (Hybrid)-->
+    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="31" />
     <!--#else-->
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
+    <!--#endif-->
     <!--#endif-->
     <application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
