--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.csproj
@@ -48,10 +48,18 @@
     <ItemGroup Condition="'$(TargetFramework)' == 'MAUI_TFM'">
     <!--#endif-->
         <!--#if (AddMauiToolkit)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0"/>
+        <!--#if (Net7)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="3.0.0"/>
+        <!--#else-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0"/>
+        <!--#endif-->
         <!--#endif-->
         <!--#if (AddMauiMarkup)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.1.1" />
+        <!--#if (Net7)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="2.0.0" />
+        <!--#else-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.1" />
+        <!--#endif-->
         <!--#endif-->
     <!--#if (AddMauiToolkit || AddMauiMarkup)-->
     </ItemGroup>
