--- a/src/ProjectTemplates/MauiAppCS/MauiAppCS.csproj
+++ b/src/ProjectTemplates/MauiAppCS/MauiAppCS.csproj
@@ -53,13 +53,13 @@
     </ItemGroup>
 
     <ItemGroup>
-        <None Remove="MauiAppCS.code-workspace" />
+        <None Remove="$safeprojectname$.code-workspace" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.1"/>
-        <PackageReference Include="VijayAnand.MauiToolkit" Version="1.0.1"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="2.0.0"/>
+        <PackageReference Include="VijayAnand.MauiToolkit" Version="2.0.0"/>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
     </ItemGroup>
 </Project>
