Support for Windows Unpackaged target type

--- a/src/MauiTemplatesCLI/MauiAppX/MauiApp1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppX/MauiApp1.csproj
@@ -43,6 +43,9 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>MauiApp1</RootNamespace>
+        <!--#if (Unpackaged)-->
+        <WindowsPackageType>None</WindowsPackageType>
+        <!--#endif-->
 
         <!-- Display name -->
         <ApplicationTitle>MauiApp1</ApplicationTitle>
