--- a/src/MauiTemplatesCLI/MauiAppX/Properties/launchSettings.json
+++ b/src/MauiTemplatesCLI/MauiAppX/Properties/launchSettings.json
@@ -1,7 +1,11 @@
 {
   "profiles": {
     "Windows Machine": {
+      //#if (Unpackaged)
+      "commandName": "Project",
+      //#else
       "commandName": "MsixPackage",
+      //#endif
       "nativeDebugging": false
     }
   }
