--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.csproj
@@ -11,10 +11,12 @@
         <!-- .NET MAUI -->
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
+
         <!-- Project Options -->
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>MauiClassLib</RootNamespace>
+
         <!-- Target Platform Options -->
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">14.2</SupportedOSPlatformVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">14.0</SupportedOSPlatformVersion>
@@ -33,11 +35,20 @@
     <!--#if (AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
     <ItemGroup>
     <!--#endif-->
+        <!--#if (Net7)-->
         <!--#if (AddToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="1.3.0"/>
+        <PackageReference Include="CommunityToolkit.Maui" Version="3.0.0"/>
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.1.1"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="2.0.0"/>
+        <!--#endif-->
+        <!--#else-->
+        <!--#if (AddToolkitPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0"/>
+        <!--#endif-->
+        <!--#if (AddMarkupPackage)-->
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.1"/>
+        <!--#endif-->
         <!--#endif-->
         <!--#if (AddMvvmToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0"/>
@@ -47,7 +58,7 @@
     <!--#endif-->
 
     <!--#if (ConditionalCompilation)-->
-    <ItemGroup Condition="'$(TargetFramework)' != 'net6.0'">
+    <ItemGroup Condition="'$(TargetFramework)' != 'MAUI_TFM'">
         <Compile Remove="**\*.Standard.cs" />
         <None Include="**\*.Standard.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
     </ItemGroup>
